refactor: update Dockerfile and nginx configuration

--- a/slides/vax-8600.md
+++ b/slides/vax-8600.md
@@ -10,4 +10,4 @@
 
 Η ενότητα I προσλαμβάνει και αποκωδικοποιεί τις εντολές. Η ενότητα M Box ελέγχει την μνήμη και την είσοδο/έξοδο, μεταφράζει εικονικές διευθύνσεις σε φυσικές και περιέχει μια κρυφή μνήμη δεδομένων των 16KB.
 
-![VAX-8600](../resources/images/vax-8600.jpg)
+![VAX-8600](../assets/images/vax-8600.jpg)
