fix: minor changes

--- a/slides/vax-8600.md
+++ b/slides/vax-8600.md
@@ -4,4 +4,4 @@
 
 Η κεντρική μονάδα επεξεργασίας (CPU) του είχε κύκλο μηχανής 80 ns (12.5 MHz) και υλοποιήθηκε με συστοιχίες μακροκυψελίδων (macrocell arrays ή MCAs) λογικών πυλών με σύζευξη εκπομπού (ECL). Η CPU αποτελείται από 4 κύριες λογικές ενότητες: E, F, I και M. Η ενότητα E εκτελεί όλες τις εντολές, συμπεριλαμβανομένων των εντολών κινητής υποδιαστολής (floating-point) μέσω μικροκώδικα. Περιέχει μια αριθμητική και λογική μονάδα (ALU) και έναν κυλινδρικό μετατοπιστή (barrel shifter). Η ενότητα F, ή επιταχυντής κυλιόμενης υποδιαστολής (FPA), είναι προαιρετική, για την υποβοήθηση εντολών κινητής υποδιαστολής και πολλαπλασιασμού και διαίρεσης ακεραίων. Η ενότητα I προσλαμβάνει και αποκωδικοποιεί τις εντολές. Η ενότητα M Box ελέγχει την μνήμη και την είσοδο/έξοδο, μεταφράζει εικονικές διευθύνσεις σε φυσικές και περιέχει μια κρυφή μνήμη δεδομένων των 16KB.
 
-![VAX-8600](../assets/images/vax-8600-talos.jpg)
+![VAX 8600 Talos](../assets/images/vax-8600-talos.jpg)
